<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  
    tools:context=".TeamCreationActivity" >
    <RelativeLayout
        android:id="@+id/teamNameLayout"
        android:padding="8dp"
         android:layout_width="match_parent"
    android:layout_height="wrap_content"
        >
  <EditText
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
              android:ems="40"
            android:inputType="text"
            android:maxLength="@string/team_name_count"
            android:padding="4dp"
            android:background="@drawable/custom_bg"
            android:hint="@string/team_name_hint">
        </EditText>
		        <LinearLayout
		            android:id="@+id/teamNameCountLayout"
		        	android:orientation="horizontal"
		        	android:layout_alignParentRight="true"
		        	android:layout_alignParentEnd="true"
		        	android:layout_below="@id/teamName"
		         	android:layout_width="wrap_content"
		    		android:layout_height="wrap_content">
            			 <TextView
					          android:id="@+id/team_name_count"
					          android:layout_width="wrap_content"
					          android:layout_height="wrap_content"
					          android:textColor="#7e7e7e"
					          />
            			 <TextView
					          android:id="@+id/team_name_count_limit"
					          android:layout_width="wrap_content"
					          android:layout_height="wrap_content"
					          android:textColor="#7e7e7e"
					          android:text="@string/team_name_count"
					          />
		            </LinearLayout>
        </RelativeLayout>
          <View
              android:id = "@+id/seperatorView"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_below="@id/teamNameLayout"
             android:background="#cccccc"/>
      <TextView
          android:id="@+id/team_members_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_centerVertical="true"
          android:text="@string/add_members"
          android:layout_below="@+id/seperatorView">
    </TextView>
  

    <ListView
        android:id="@+id/task_list"
        android:layout_below="@+id/team_members_view"
        android:layout_above="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Create"
        android:onClick="saveTeam"
        android:width="170dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
